# gfx-assignment1

./: CMakeLists.txt  bezier.cpp  main.cpp
soil-master/src/SOIL/: SOIL.h
